docs: add documentation for list oppenings
